# iot-modular-firmware

./: CMakeLists.txt  prj.conf  test.py
src/: main.c
src/application/: protocol_check.c  protocol_check.h
src/components/: buzzer.c  buzzer.h  led.c  led.h  led1.c  led1.h  uart_com.c  uart_com.h
src/main/: main.c
